# raytracer

./: CMakeLists.txt  README.md
src/: AreaLight.h  BoundingBox.h  Camera.h  KdTree.h  Material.h  Mesh.h  Model.h  ObjModel.h  Plane.cpp  Plane.h  PointLight.h  Primitive.h  Ray.h  Raytracer.cpp  Raytracer.h  Scene.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Window.h  main.cpp
